--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
 	"name": "vscode-glimmer-syntax",
 	"displayName": "Glimmer Templates Syntax for VS Code",
 	"description": "Glimmer templates syntax",
-	"version": "0.0.3",
+	"version": "0.0.4",
 	"autor": "Aleksandr Kanunnikov <lifeart92@gmail.com>",
 	"license": "MIT",
 	"publisher": "lifeart",
+	"icon": "icon.png",
+	"preview": true,
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/lifeart/vsc-ember-syntax"
