--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
 	"name": "vscode-glimmer-syntax",
 	"displayName": "Glimmer Templates Syntax for VS Code",
 	"description": "Glimmer templates syntax",
-	"version": "0.0.19",
-	"autor": "Aleksandr Kanunnikov <lifeart92@gmail.com>",
+	"version": "0.0.20",
+	"author": "Aleksandr Kanunnikov <lifeart92@gmail.com>",
 	"license": "MIT",
 	"publisher": "lifeart",
 	"icon": "icon.png",
