--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "vscode-glimmer-syntax",
 	"displayName": "Glimmer Templates Syntax for VS Code",
 	"description": "Glimmer templates syntax",
-	"version": "0.0.22",
+	"version": "0.0.23",
 	"author": "Aleksandr Kanunnikov <lifeart92@gmail.com>",
 	"license": "MIT",
 	"publisher": "lifeart",
@@ -35,6 +35,17 @@
 	},
 	"extensionKind": "ui",
 	"contributes": {
+		"languages": [{
+			"id": "handlebars",
+			"extensions": [
+				".hbs"
+			],
+			"aliases": [
+				"handlebars",
+				"hbs"
+			],
+			"configuration": "./handlebars.configuration.json"
+		}],
 		"grammars": [
 			{
 				"label": "Handlebars (Ember)",
