--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
 	],
 	"scripts": {
 		"vs:package": "vsce package --yarn",
-		"vs:publish": "vsce publish --yarn"
+		"vs:publish": "vsce publish --yarn",
+		"vs:publish:ci": "vsce publish --yarn --pat $VSCODE_STORE_TOKEN",
+		"ov:publish:ci": "ovsx publish --yarn --pat $OPEN_VSX_STORE_TOKEN"
 	},
 	"extensionKind": ["ui"],
 	"contributes": {
