--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
 		"vs:publish:ci": "vsce publish --yarn --pat $VSCODE_STORE_TOKEN",
 		"ov:publish:ci": "ovsx publish --yarn --pat $OPEN_VSX_STORE_TOKEN"
 	},
-	"extensionKind": ["ui"],
+	"extensionKind": [
+		"ui"
+	],
 	"contributes": {
 		"languages": [
 			{
@@ -69,5 +71,14 @@
 				}
 			}
 		]
+	},
+	"devDependencies": {
+		"vsce": "1.83.0",
+		"ovsx": "^0.1.0-next.97d460c",
+		"vscode": "^1.1.29"
+	},
+	"volta": {
+		"node": "14.15.4",
+		"yarn": "1.22.10"
 	}
 }
