--- a/package.json
+++ b/package.json
@@ -86,9 +86,9 @@
 		]
 	},
 	"devDependencies": {
-		"vsce": "1.83.0",
-		"ovsx": "^0.1.0-next.97d460c",
-		"vscode": "^1.1.29"
+		"vsce": "1.100.1",
+		"ovsx": "^0.2.1",
+		"vscode": "^1.1.37"
 	},
 	"volta": {
 		"node": "12.20.1",
