--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -21,13 +21,15 @@ jobs:
       - name: install gitversion tool
         uses: gittools/actions/gitversion/setup@v0.9
         with:
-            versionSpec: '5.7.x'
+          versionSpec: '5.7.x'
         env:
           ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
 
       - name: execute gitversion
         id: gitversion # step id used as reference for output values
         uses: gittools/actions/gitversion/execute@v0.9
+        with:
+          output: "json"
         env:
           ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
 
