--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -59,6 +59,9 @@ jobs:
         env:
           VERSION: "${{ steps.gitversion.outputs.majorMinorPatch }}"
 
+      - name: compile
+        run: node:package
+
       - name: compile and create vsix
         run: yarn vs:package
 
