--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "vscode-glimmer-syntax",
 	"displayName": "Glimmer Templates Syntax for VS Code",
 	"description": "Glimmer templates syntax",
-	"version": "1.0.0",
+	"version": "2.0.0",
 	"author": "Aleksandr Kanunnikov <lifeart92@gmail.com>",
 	"license": "MIT",
 	"publisher": "lifeart",
@@ -29,11 +29,20 @@
 		"Handlebars",
 		"Syntax"
 	],
+	"activationEvents": [
+        "onLanguage:javascript",
+        "onLanguage:typescript"
+    ],
+	"main": "./out/index.js",
 	"scripts": {
+		"vscode:prepublish": "yarn node:package",
+        "compile": "tsc -p ./",
+        "watch": "tsc -w -p ./",
 		"vs:package": "vsce package --yarn",
 		"vs:publish": "vsce publish --yarn",
 		"vs:publish:ci": "vsce publish --yarn --pat $VSCODE_STORE_TOKEN",
-		"ov:publish:ci": "ovsx publish --yarn --pat $OPEN_VSX_STORE_TOKEN"
+		"ov:publish:ci": "ovsx publish --yarn --pat $OPEN_VSX_STORE_TOKEN",
+		"node:package": "webpack --mode production"
 	},
 	"extensionKind": [
 		"ui"
@@ -82,16 +91,39 @@
 					"meta.embedded.block.html": "text.html.handlebars"
 				}
 			}
-			
-		]
-	},
-	"devDependencies": {
-		"vsce": "1.100.1",
-		"ovsx": "^0.2.1",
-		"vscode": "^1.1.37"
+		],
+		"typescriptServerPlugins": [
+            {
+                "name": "typescript-hbs-plugin",
+                "enableForWorkspaceTypeScriptVersions": true
+            }
+        ],
+        "jsonValidation": [
+            {
+                "fileMatch": "jsconfig*.json",
+                "url": "./schemas/tsconfig.schema.json"
+            },
+            {
+                "fileMatch": "tsconfig*.json",
+                "url": "./schemas/tsconfig.schema.json"
+            }
+        ]
 	},
 	"volta": {
 		"node": "12.20.1",
 		"yarn": "1.22.10"
+	},
+	"dependencies": {
+		"typescript-hbs-plugin": "^0.1.0"
+	},
+	"devDependencies": {
+		"ovsx": "^0.2.1",
+		"vsce": "1.100.1",
+		"@types/node": "^12.7.5",
+        "@types/vscode": "^1.31.0",
+		"ts-loader": "^9.2.3",
+		"typescript": "^4.1.3",
+		"webpack": "^5.44.0",
+		"webpack-cli": "^4.7.2"
 	}
 }
