--- a/package.json
+++ b/package.json
@@ -30,19 +30,22 @@
 		"Syntax"
 	],
 	"activationEvents": [
-        "onLanguage:javascript",
-        "onLanguage:typescript"
-    ],
+		"onLanguage:javascript",
+		"onLanguage:typescript"
+	],
 	"main": "./out/index.js",
+	"browser": "./out/worker.js",
 	"scripts": {
-		"vscode:prepublish": "yarn node:package",
-        "compile": "tsc -p ./",
-        "watch": "tsc -w -p ./",
+		"vscode:prepublish": "yarn node:package && yarn web:package",
+		"compile": "tsc -p ./",
+		"watch": "tsc -w -p ./",
 		"vs:package": "vsce package --yarn",
 		"vs:publish": "vsce publish --yarn",
 		"vs:publish:ci": "vsce publish --yarn --pat $VSCODE_STORE_TOKEN",
 		"ov:publish:ci": "ovsx publish --yarn --pat $OPEN_VSX_STORE_TOKEN",
-		"node:package": "webpack --mode production"
+		"node:package": "webpack --mode production",
+		"web:package": "webpack --mode production",
+		"chrome": "vscode-test-web --browserType=chromium --extensionDevelopmentPath=."
 	},
 	"extensionKind": [
 		"ui"
@@ -93,21 +96,21 @@
 			}
 		],
 		"typescriptServerPlugins": [
-            {
-                "name": "typescript-hbs-plugin",
-                "enableForWorkspaceTypeScriptVersions": true
-            }
-        ],
-        "jsonValidation": [
-            {
-                "fileMatch": "jsconfig*.json",
-                "url": "./schemas/tsconfig.schema.json"
-            },
-            {
-                "fileMatch": "tsconfig*.json",
-                "url": "./schemas/tsconfig.schema.json"
-            }
-        ]
+			{
+				"name": "typescript-hbs-plugin",
+				"enableForWorkspaceTypeScriptVersions": true
+			}
+		],
+		"jsonValidation": [
+			{
+				"fileMatch": "jsconfig*.json",
+				"url": "./schemas/tsconfig.schema.json"
+			},
+			{
+				"fileMatch": "tsconfig*.json",
+				"url": "./schemas/tsconfig.schema.json"
+			}
+		]
 	},
 	"volta": {
 		"node": "12.20.1",
@@ -117,12 +120,14 @@
 		"typescript-hbs-plugin": "^0.1.1"
 	},
 	"devDependencies": {
-		"ovsx": "^0.2.1",
-		"vsce": "1.100.1",
 		"@types/node": "^12.7.5",
-        "@types/vscode": "^1.31.0",
+		"@types/vscode": "^1.31.0",
+		"@vscode/test-web": "^0.0.15",
+		"ovsx": "^0.2.1",
+		"path-browserify": "^1.0.1",
 		"ts-loader": "^9.2.3",
 		"typescript": "^4.1.3",
+		"vsce": "1.100.1",
 		"webpack": "^5.44.0",
 		"webpack-cli": "^4.7.2"
 	}
