--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "vscode-glimmer-syntax",
 	"displayName": "Glimmer Templates Syntax for VS Code",
 	"description": "Glimmer templates syntax",
-	"version": "2.0.0",
+	"version": "2.0.1",
 	"author": "Aleksandr Kanunnikov <lifeart92@gmail.com>",
 	"license": "MIT",
 	"publisher": "lifeart",
@@ -86,12 +86,14 @@
 			{
 				"injectTo": [
 					"source.js",
-					"source.ts"
+					"source.ts",
+					"source.gjs",
+					"source.gts"
 				],
 				"scopeName": "inline.template",
 				"path": "./syntaxes/inline-hbs.json",
 				"embeddedLanguages": {
-					"meta.embedded.block.html": "text.html.handlebars"
+					"meta.embedded.block.html": "handlebars"
 				}
 			}
 		],
