--- a/package.json
+++ b/package.json
@@ -64,8 +64,8 @@
         ],
         "configuration": "./languages/inline-template.configuration.json",
         "icon": {
-          "light": "./assets/glimmer-js-bold-light.svg",
-          "dark": "./assets/glimmer-js-bold-dark.svg"
+          "light": "./assets/glimmer-js-light.svg",
+          "dark": "./assets/glimmer-js-dark.svg"
         }
       },
       {
@@ -79,8 +79,8 @@
         ],
         "configuration": "./languages/inline-template.configuration.json",
         "icon": {
-          "light": "./assets/glimmer-ts-bold-light.svg",
-          "dark": "./assets/glimmer-ts-bold-dark.svg"
+          "light": "./assets/glimmer-ts-light.svg",
+          "dark": "./assets/glimmer-ts-dark.svg"
         }
       },
       {
