--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "vs:publish:ci": "vsce publish --yarn --pat $VSCODE_STORE_TOKEN",
     "ov:publish:ci": "ovsx publish --yarn --pat $OPEN_VSX_STORE_TOKEN",
     "node:package": "webpack --mode production",
+    "web:package": "webpack --mode production",
     "prettier": "prettier --write \"**/*.{js,ts,json,yaml}\"",
     "prettier:package": "prettier --write \"package.json\"",
     "chrome": "vscode-test-web --browserType=chromium --extensionDevelopmentPath=."
