Change handlebars to ember-handlebars so linguist scope tests pass

--- a/package.json
+++ b/package.json
@@ -132,7 +132,7 @@
       {
         "label": "Handlebars (Ember)",
         "language": "handlebars",
-        "scopeName": "text.html.handlebars",
+        "scopeName": "text.html.ember-handlebars",
         "path": "./syntaxes/handlebars.tmLanguage.json"
       },
       {
