--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -45,6 +45,16 @@ jobs:
       - name: install dependencies
         run: yarn install --frozen-lockfile
 
+      - name: build grammars
+        run: yarn build:grammars
+
+      - name: add and commit grammars
+        uses: EndBug/add-and-commit@v9
+        with:
+          add: 'syntaxes'
+          default_author: github_actions
+          message: 'chore: build grammar json files for ${{ steps.gitversion.outputs.majorMinorPatch }}'
+
       - name: update metadata in package.json
         uses: onlyutkarsh/patch-files-action@v1.0.1
         with:
